--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://github.com/z3zin?tab=repositories" target="_blank">José Antonio</a> para o <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">CursoemVideo</a></p>
+        <p>Site criado por <a href="https://github.com/jose-antonio-coelho" target="_blank">José Antonio</a> para o <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">CursoemVideo</a></p>
     </footer>
 </body>
 </html>
